--- a/NaimouzaHighSchool/Views/MainWindowView.xaml
+++ b/NaimouzaHighSchool/Views/MainWindowView.xaml
@@ -40,6 +40,7 @@
                 <MenuItem Header="Staff">
                     <MenuItem Header="Detail" Command="{Binding ShowStaffDetailViewCommand, Source={StaticResource vm}}"/>
                     <Separator />
+                    <MenuItem Header="Teacher Entry" Command="{Binding ShowTeacherEntryViewCommand, Source={StaticResource vm}}"/>
                     <MenuItem Header="Import from excel" Command="{Binding ShowStaffExcelImportWindowCommand, Source={StaticResource vm}}"/>
                 </MenuItem>
                 <MenuItem Header="Student">
