--- a/NaimouzaHighSchool/views/MarkEntryView.xaml
+++ b/NaimouzaHighSchool/views/MarkEntryView.xaml
@@ -3,30 +3,95 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:NaimouzaHighSchool.Views"
+        xmlns:local="clr-namespace:NaimouzaHighSchool.ViewModels"
+        xmlns:conv="clr-namespace:NaimouzaHighSchool.ViewModels.Converters"
         mc:Ignorable="d"
-        Title="Marks Entry" Height="450" Width="700" Closing="Window_Closing">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition />
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1.5*"/>
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <Border Grid.ColumnSpan="2">
-            <Label>Exams Marks Entry</Label>
-        </Border>
-        <DataGrid Grid.Row="1">
-            
-        </DataGrid>
-        
-        <Border Grid.Row="2" Grid.ColumnSpan="2">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button>Save</Button>
+        Title="Marks Entry" Height="450" Width="830" Closing="Window_Closing">
+    <Window.Resources>
+        <local:MarkEntryViewModel x:Key="mrkvm" />
+        <conv:IntConverter x:Key="intConverter" />
+    </Window.Resources>
+    <DockPanel LastChildFill="True">
+        <Border DockPanel.Dock="Bottom">
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Teacher" Margin="2"/>
+                <ComboBox Width="200" 
+                          ItemsSource="{Binding TeacherList, Source={StaticResource mrkvm}}"
+                          SelectedIndex="{Binding TeacherListIndex, Source={StaticResource mrkvm}, Mode=TwoWay}"
+                          Margin="2">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Vertical" Margin="1">
+                                <TextBlock Text="{Binding Name}" FontSize="13"/>
+                                <TextBlock Text="{Binding Subject}" FontSize="8"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <Label Content="Password" Margin="2"/>
+                <PasswordBox Margin="2" Width="100" />
+                <Button Content="Save" 
+                        Command="{Binding SaveCommand, Source={StaticResource mrkvm}}"
+                        Margin="2" Width="80"/>
             </StackPanel>
         </Border>
-    </Grid>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Border>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Session Starting Year" Margin="2"/>
+                    <TextBox Margin="2" 
+                             Text="{Binding StartYear, Source={StaticResource mrkvm}, Converter={StaticResource intConverter}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Width="60" />
+                    <Label Content="Ending Year" Margin="2"/>
+                    <TextBox Margin="2"
+                             Text="{Binding EndYear, Source={StaticResource mrkvm}, Converter={StaticResource intConverter}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Width="60"/>
+                    <Label Content="Class" Margin="2" />
+                    <ComboBox 
+                        ItemsSource="{Binding Cls, Source={StaticResource mrkvm}}"
+                        SelectedIndex="{Binding ClsIndex, Source={StaticResource mrkvm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        Margin="2" Width="60"/>
+                    <Label Content="Section" Margin="2"/>
+                    <ComboBox Margin="2" 
+                              ItemsSource="{Binding Section, Source={StaticResource mrkvm}}"
+                              SelectedIndex="{Binding SectionIndex, Source={StaticResource mrkvm}, Mode=TwoWay}"
+                              Width="60" />
+                </StackPanel>
+            </Border>
+            <Border Grid.Row="1">
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Unit" Margin="2"/>
+                    <ComboBox Margin="2" 
+                              ItemsSource="{Binding ExamUnit, Source={StaticResource mrkvm}}"
+                              SelectedIndex="{Binding ExamUnitIndex, Source={StaticResource mrkvm}, Mode=TwoWay}"
+                              Width="50" />
+                    <Label Content="Type" 
+                           Visibility="{Binding TypeVisibility, Source={StaticResource mrkvm}}"
+                           Margin="2"/>
+                    <ComboBox Margin="2"
+                              ItemsSource="{Binding ExmType, Source={StaticResource mrkvm}}"
+                              SelectedIndex="{Binding ExmTypeIndex, Source={StaticResource mrkvm}, Mode=TwoWay}"
+                              Visibility="{Binding TypeVisibility, Source={StaticResource mrkvm}}"
+                              Width="80"/>
+                    <Label Margin="2" Content="Subject" />
+                    <ComboBox Margin="2" 
+                              ItemsSource="{Binding Subject, Source={StaticResource mrkvm}}"
+                              SelectedIndex="{Binding SubjectIndex, Source={StaticResource mrkvm}, Mode=TwoWay}"
+                              Width="200"/>
+                    <Label Margin="2" Content="Group : " />
+                    <Label Margin="2" Content="{Binding SubsGroup, Source={StaticResource mrkvm}}" Width="200"/>
+                    <Label Content="Full Mark" Margin="2" />
+                    <TextBox Margin="2" Width="60" />
+                </StackPanel>
+            </Border>
+            <DataGrid Grid.Row="2">
+                
+            </DataGrid>
+        </Grid>
+    </DockPanel>
 </Window>
